# l2mapconv-public

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  release.yml
application/: CMakeLists.txt
application/install/: c1.bat  hf.bat
application/install/shaders/: entity.frag  entity.vert  geodata.frag  geodata.geom
application/src/: Application.cpp  Application.h  CameraSystem.cpp  CameraSystem.h  Entity.h  GeodataEntityFactory.cpp  GeodataEntityFactory.h  GeodataSystem.cpp  GeodataSystem.h  LoadingSystem.cpp  LoadingSystem.h  Map.h  Renderer.cpp  Renderer.h  RenderingContext.h  RenderingSystem.cpp  RenderingSystem.h  Timestep.h  UIContext.h  UISystem.cpp  UISystem.h  UnrealConverters.h  UnrealLoader.cpp  UnrealLoader.h  WindowSystem.cpp  WindowSystem.h  main.cpp  pch.h
geodata/: CMakeLists.txt
geodata/include/geodata/: Builder.h  BuilderSettings.h  ExportBuffer.h  Exporter.h  Loader.h  Map.h
geodata/src/: Builder.cpp  Compressor.cpp  Compressor.h  ExportBuffer.cpp  Exporter.cpp  L2JSerializer.cpp  L2JSerializer.h  Map.cpp  NSWE.cpp  NSWE.h  Optimizer.cpp  Optimizer.h  Preprocessing.cpp  RecastHelpers.cpp  RecastHelpers.h  RecastRasterization.cpp  RecastRasterization.h  pch.h
geometry/: CMakeLists.txt
geometry/include/geometry/: Box.h  Capsule.h  Ellipsoid.h  Frustum.h  Intersection.h  Sphere.h  Transformation.h  Triangle.h
geometry/src/: Box.cpp  Capsule.cpp  Ellipsoid.cpp  Frustum.cpp  Sphere.cpp  Transformation.cpp  Triangle.cpp
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/llvm/: CMakeLists.txt
libs/patches/: recast.patch
libs/stb/: CMakeLists.txt
math/: CMakeLists.txt
math/include/math/: Frustum.h
math/src/: Frustum.cpp
rendering/: CMakeLists.txt
rendering/include/rendering/: Camera.h  DrawableMesh.h  Entity.h  EntityMesh.h  EntityRenderer.h  EntityShader.h  EntityTree.h  FrameSettings.h  GeodataMesh.h  Mesh.h  MeshSurface.h  Scene.h
rendering/src/: Camera.cpp  Entity.cpp  EntityMesh.cpp  EntityRenderer.cpp  EntityShader.cpp  GeodataMesh.cpp  Mesh.cpp  Scene.cpp  pch.h
unreal/: CMakeLists.txt
unreal/include/unreal/: Actor.h  Archive.h  BSP.h  Level.h  Material.h  Object.h  ObjectLoader.h  ObjectRef.h  Package.h  Primitives.h  StaticMesh.h  Terrain.h
unreal/src/: ArchiveLoader.cpp  BSP.cpp  Decryptor.cpp  Decryptor.h  Level.cpp  Material.cpp  ObjectLoader.cpp  Primitives.cpp  PropertyExtractor.cpp  main.cpp  pch.h
utils/: CMakeLists.txt
utils/include/utils/: ExtractionHelpers.h  Log.h  Timer.h
utils/src/: Bitset.cpp  StreamDump.cpp
